@@ -15,7 +15,6 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -27,7 +26,10 @@ public class OrderService {
 
     @Transactional(readOnly = true)
     public List<OrderDto> getAll() {
-        return orderRepository.findAll().stream().map(mapper::toDto).collect(Collectors.toList());
+        return orderRepository.findAll()
+                .stream()
+                .map(mapper::toDto)
+                .toList();
     }
 
     @Transactional
